TODO optimizer : precompute constant expressions
TODO optimizer : reduce expressions such as function()...() , [arr][0] or if(true) (for better inlining)
TODO optimizer : move multiple statics access into local variables
TODO inlining : allow inlined getter/setter
TODO inlining : substitute class+function type parameters in order to have fully typed expressions

2008-??-??: 2.01
	fixed php.Web.setCookie() for expire time
	fixed php.net.Socket.setTimeout()
	fixed SPOD/MySql for PHP
	fixed Type.enumParameters() and Type.typeOf() for PHP
	fixed null references in class constructors for array arguments
	fixed php.Boot.__string_rec() when invoked from toString
	added neko.NativeString and neko.NativeArray
	fixed php.Sys
	allowed optional Context in remoting connections
	fixed extern classes for flash < 8
	fixed inherited protected/private properties in as3 SWF library

2008-07-28: 2.0
	fixed current package bug in inherited constructor type
	delayed type-parameter constraints check (allow mutual rec extends for SPOD)
	improved unclosed macro error reporting
	haxe/PHP integration
	renamed NekoSocketConnection to SyncSocketConnection (php support)
	fixes in genAs3
	fix for flash9 : always coerce call return type
	set all private+protected names from SWF lib to public (allow override+reflect)
	flash9 : use findprop instead of findpropstrict for 'this' access (allow dynamic)
	don't allow nullness changes in overrided/implemented
	prevent typing hole with overriden polymorphic methods
	added neko.vm.Mutex and neko.vm.Deque (included in neko 1.7.1)
	added package remapping using --remap

2008-07-17: 2.0-RC1
	genneko : remove big array error (fixed in neko 1.7.1)
	fixed neko.net.ThreadRemotingServer.onXML
	genswf9 : fixed verify error with Null<Class> (was using dynamic access)
	small patch for jsfl support
	added .cca for faster string operations on Flash9/Flash/JS
	bugfix with inlined local variables
	upgraded flash9 api to flex3/player 9.0.115