@@ -7,8 +7,10 @@ TODO inlining : allow inlined getter/setter
 TODO inlining : substitute class+function type parameters in order to have fully typed expressions
 
 2008-??-??: 2.01
+	added runttime check for php.io.Socket.shutdown (uses fclose in php 5.1.x)
+	fixed php rethrow in catches and added the possibility to catch native exceptions
 	fixed php.Web.setCookie() for expire time
-	fixed php.net.Socket.setTimeout()
+	fixed php.net.Socket.setTimeout(), php.io.Process
 	fixed SPOD/MySql for PHP
 	fixed Type.enumParameters() and Type.typeOf() for PHP
 	fixed null references in class constructors for array arguments
